pages/pray/heatmap.css
body {
    background: white !important;
}
button {
    line-height: initial;
}
#initialize-screen {
    width: 100%;
    height: 2000px;
    z-index: 10;
    background-color: white;
    position: absolute;
}
#initialize-spinner-wrapper{
    position:relative;
    top:45%;
}
progress {
    top: 50%;
    margin: 0 auto;
    height:50px;
    width:300px;
}
.pb_navbar .navbar-toggler {
    color: black;
    border: none;
    cursor: pointer;
    padding-right: 0;
    font-size: 30px;
}
.pb_navbar .navbar-toggler:active, .pb_navbar .navbar-toggler:focus {
    box-shadow: none;
    outline: none; }
.navbar-light .navbar-brand, .navbar-light .brand-color {
    color: var(--bs-navbar-brand-color);
}
#head_block, #foot_block {
    position: absolute;
    width:100%;
    z-index: 5;
    background: white;
    padding: 1em 2em;
    opacity: .9;
    display:none;
    line-height: 1.5;
}
#head_block {
    margin: 0 auto 1em;
    z-index: 10;
}
#head_block_wrapper {
    position: absolute;
    z-index: 5;
    padding: 0;
    width: 100%;
}
#head_block_display {
    position: relative;
    background: white;
    width: -moz-fit-content;
    width: fit-content;
    padding: 1em;
    opacity: .9;
    margin: 0 auto 1em;
}
#foot_block {
    bottom: 0;
    margin: 1em auto 0;
    line-height: 1.5;
}
#foot_block i {
    line-height: 1;
}
#offcanvas_menu {
    background: white;
    padding: 1em;
}
#offcanvas_location_details {
    background: white;
    padding: 1em;
    min-width: 40%;
}
#offcanvas_stats {
    background: white;
    padding: 1em;
    height: 80%;
}

@media (max-width: 576px) {
    #foot_block {
        padding: 0.5em 0.7em 1em;
    }

    .row {
        --bs-gutter-x: 0;
    }

    .foot__icon {
        height: 40px;
    }
}

.nav-item {
    list-style-type: none;
}
#title {
    font-weight: bold;
}
.mapboxgl-ctrl-group {
    margin-top:120px !important;
}
.one-em {
    font-size: 1.5rem;
}
.two-em {
    font-size: 2rem;
}
.three-em {
    font-size: 3rem;
}
.bold {
    font-weight: bold;
}
.stats-title {
    font-size: 1.5rem;
    font-weight: 400;
}
.stats-figure {
    font-size: 2rem;
}
@media (max-width: 768px) {
    .mapboxgl-ctrl-group {
        margin-top:100px !important;
    }
    .one-em {
        font-size: 1rem;
    }
    .two-em {
        font-size: 1.5rem;
    }
    .three-em {
        font-size: 2rem;
    }
    .stats-title {
        font-size: 1rem;
        padding-bottom: 0;
    }
    .stats-figure {
        font-size: 1.8rem;
        font-weight: bold;
        padding-top: 0;
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}
.loading-spinner.active {
    border-radius: 50%;
    width: 24px;
    height: 24px;
    border: 0.25rem solid #919191;
    border-top-color: black;
    animation: spin 1s infinite linear;
    display: inline-block;
}
#nav-list ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}
#nav-list li a {
    display: block;
    text-align: center;
    padding: 16px;
    text-decoration: none;
    color:black;
}
#nav-list li a.highlight {
    border: 1px black solid;
    border-radius: 4px;
}
#nav-list li a.highlight:hover {
    background:black;
    color:white;
}
.nav-list ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
.nav-list li {
    float:right;
}
.nav-list li a {
    display: block;
    text-align: center;
    padding: 16px;
    text-decoration: none;
    color:black;
}
.nav-list li a.highlight {
    border: 1px black solid;
    border-radius: 4px;
}
.nav-list li a.highlight:hover {
    background:black;
    color:white;
}
.nav-list-link a {
    display: block;
    text-align: center;
    padding: 16px;
    text-decoration: none;
    color:black;
}
.nav-list-link a.highlight {
    border: 1px black solid;
    border-radius: 4px;
}
.nav-list-link a.highlight:hover {
    background:black;
    color:white;
}
@media (max-width: 1150px) {
    #nav-list li a {
        padding: 10px;
    }
    .nav-list li a {
        padding: 10px;
    }
    .nav-list-link li a {
        padding: 10px;
    }
}
.navbar-brand {
    display: inline-block;
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;
}
.lap-title {
    white-space: nowrap;
}

#qr-code-block {
    background:white;
    z-index:10;
    width:300px;
    height: 350px;
    position:absolute;
    bottom: 2em;
    left: 1em;
    display:none;
}
.qr-code-image {
    padding: 0em 1em 0 1em;
    width: 100%;
}
.uppercase {
    text-transform:capitalize;
}

.map-overlay {
	position: absolute;
	right: 0;
	background: #fff;
    margin-right: 20px;
	overflow: auto;
	border-radius: 5px;
}

#map-legend {
	padding: 10px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    line-height: 18px;
    margin-bottom: 40px;

    top: 0;
    transform: translateY(-120%);

    display: flex;
}

#map-legend > * + * {
    margin-left: 10px;
}

.map-legend__layer {
    display: flex;
    align-items: center;
}

.map-legend__color-swatch {
    width: 20px;
    height: 20px;
    margin-right: 10px;
    border-radius: 5px;
}

